<resources>
    <string name="app_name">Moto.dtp.info</string>
    <string name="ok">OK</string>
    <string name="no_data">В настоящий момент  данные отсутствуют</string>
    <string name="api_version_deprecated">Версия приложения устарела.\nРекомендуем обновить приложение</string>
    <string name="api_version_unsupported">Версия приложения больше не поддерживается.\nНеобходимо обновить приложение</string>
    <string name="home">Главный</string>
    <string name="events">События</string>
    <string name="no_internet_short">Нет доступа к Интернет</string>
    <string name="no_internet">Проверьте включена ли передача мобильных данных или Wi-Fi</string>
    <string name="try_agan">Попробуйте еще раз</string>
    <string name="update">Обновить</string>
    <string name="settings_distance">Показывать не далее (км)</string>
    <string name="settings_distance_alarm">Оповещать звуком не далее (км)</string>
    <string name="settings_accidents">ДТП</string>
    <string name="settings_confirm_button">Сохранить</string>
    <string name="settings_breaks">Поломки</string>
    <string name="small_menu_refresh">Обновить</string>
    <string name="small_menu_settings">Настройки</string>
    <string name="small_menu_exit">Выйти</string>
    <string name="settings_auth_button">Авторизация</string>
    <string name="activity_auth_header">Для авторизации необходимо ввести логин и пароль такие же как и для захода на <a href="http://motodtp.info/">motodtp.info</a>. <a href="http://motodtp.info/index.php?app=core&amp;module=global&amp;section=register">Регистрация</a>.</string>
    <string name="activity_auth_login">Логин</string>
    <string name="activity_auth_password">Пароль</string>
    <string name="activity_auth_anonim_label">Анонимно</string>
    <string name="activity_create_back_button">Назад</string>
    <string name="activity_create_select_type_header">Что произошло?</string>
    <string name="activity_create_type_acc_button">ДТП</string>
    <string name="activity_create_type_break_button">Поломка</string>
    <string name="activity_create_type_steal_button">Угон</string>
    <string name="activity_create_type_other_button">Прочее</string>
    <string name="activity_create_acc_solo_button">Один участник</string>
    <string name="activity_create_acc_ma_button">Мот/авто</string>
    <string name="activity_create_acc_mm_button">Мот/мот</string>
    <string name="activity_create_acc_mp_button">Наезд на пешехода</string>
    <string name="activity_create_people_ok_button">Без травм</string>
    <string name="activity_create_people_light_button">Ушибы</string>
    <string name="activity_create_people_hard_button">Серьезные травмы</string>
    <string name="activity_create_people_death_button">Летальный исход</string>
    <string name="activity_create_confirm_button">Готово</string>
    <string name="activity_auth_cancel_label">Отмена</string>
    <string name="activity_create_people_na_button">Неизвестно</string>
    <string name="what">Что</string>
    <string name="where">Где</string>
    <string name="when">Когда</string>
    <string name="reported">Сообщил</string>
    <string name="activity_create_people_header">Что с людьми?</string>
    <string name="details">Краткое описание</string>
    <string name="settings_steal">Угоны</string>
    <string name="settings_other">Прочее</string>
    <string name="copy">Копировать</string>
    <string name="finish">Отбой</string>
    <string name="unfinish">Отменить отбой</string>
    <string name="show">Показать</string>
    <string name="hide">Скрыть</string>
    <string name="notif_system">default system</string>
    <string name="notification_sound">Выбрать звук уведомления</string>
    <string name="tab_map">Карта</string>
    <string name="activity_main_add_point_button">Создать событие</string>
    <string name="dial_button">Звонок оператору</string>
    <string name="onway_button">Еду!</string>
    <string name="title_activity_about">О приложении</string>
    <string name="config_title_notify_category">Настройки событий</string>
    <string name="config_acc_type_category">Типы инцидентов</string>
    <string name="small_menu_about">О приложении</string>
    <string name="about_info">Мото ДТП инфо - программа взаимопомощи на дорогах</string>
    <string name="about_authors">Авторы: rjhdby, Азимут, prodigy007</string>
    <string name="config_other_category">Другое</string>
    <string name="activity_auth_logout_label">Завершить сеанс</string>
    <string name="activity_auth_login_label">Войти</string>
    <string name="map_provider_category">Карта</string>
    <string name="config_map_title">Провайдер</string>
    <string name="inet_not_available">Не могу отправить запрос, пожалуйста, проверьте доступность Internet.</string>
    <string name="auth_not_available">Авторизация не возможна, пожалуйста, проверьте доступность Internet.</string>
    <string name="nothing_is_found">Ничего не найдено, попробуйте уточнить запрос</string>
    <string name="title_activity_create_acc">CreateAccActivity</string>
    <string name="request_send_message">Отправка сообщения.</string>
    <string name="settings_summary_off">Скрыты</string>
    <string name="settings_summary_on">Показаны</string>
    <string name="to_map">На карту</string>
    <string name="tab_onway">Едут/на месте</string>
    <string name="tab_messages">Сообщения</string>
    <string name="tab_log">История</string>
    <string name="share">Поделиться</string>
    <string name="code_version_prefix">Текущая версия</string>
    <string name="do_not_disturb">Не беспокоить</string>
    <string name="no_one_accident_visible">Никакие события показаны не будут</string>
    <string name="hide_info_details">Скрыть подробности</string>
    <string name="show_info_details">Показать подробности</string>
    <string name="send_sms">Отправить СМС: </string>
    <string name="make_call">Позвонить: </string>
    <string name="about_url_support"><a href="http://forum.moto.msk.ru/forum/38-%D0%BC%D0%BE%D0%B1%D0%B8%D0%BB%D1%8C%D0%BD%D0%BE%D0%B5-%D0%BF%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5/">Поддержка</a>.</string>
    <string name="title_dialog_onway_confirm">Вы готовы выехать?</string>
    <string name="current_version_text">Текущая версия:</string>
    <string name="title_dialog_acc_not_actual">Этот инцидент уже не актуален.</string>
    <string name="auth_role">Вы: %1$s.</string>
    <string name="auth_password_error">Не удалось авторизоваться. Возможно неверно введен логин или пароль.</string>
    <string name="title_dialog_cancel_onway_confirm">Вы хотите отменить выезд?</string>
    <string name="onway_cancel_button">Отмена выезда</string>
    <string name="settings_hours_ago">Показывать не старше (ч)</string>
    <string name="settings_max_notifications">Сообщений в области уведомлений</string>
    <string name="settings_use_vibration">Использовать вибрацию</string>
    <string name="settings_no_use_vibration">Не использовать вибрацию</string>
    <string name="title_activity_business_card">BusinessCardActivity</string>
    <string name="business_card">Визитка</string>
    <string name="business_card_header">ДТП, поломка? Звоните</string>
    <string name="business_card_phone">+7–800–775–17–34</string>
    <string name="business_card_sub_header">и помощь приедет.</string>
    <string name="business_card_application">Приложение Android</string>
    <string name="business_card_forum">Форум</string>
    <string name="activity_create_for_stat">Для статистики (рассылки не будет)</string>
    <string name="popup_dial">Вызов: %1$s</string>
    <string name="popup_sms">СМС: %1$s</string>
    <string name="copy_coordinates">Скопировать координаты</string>
    <string name="coordinates_copied">координаты скопированы в буфер обмена</string>
    <string name="time_interval_short">%1$dч %2$dм</string>
    <string name="accident_row_content">%1$s \u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0"</string>
    <string name="search_address_hint">адрес</string>
    <string name="phone">+78007751734</string>
    <string name="addressDialog">Уточните адрес. Номер дома, в центр/в область/внешнее/внутреннее и т.д.</string>
    <string name="unable_to_load">Не удалось загрузить данные</string>
    <string name="accident_created_succ">Инцидент успешно создан</string>
    <string name="location_disabled_message_text">"Для корректной работы приложения необходимо включить геоданные."</string>
    <string name="cancel">Отмена</string>
    <string name="enable">Включить</string>
    <string name="conflict">Конфликт</string>
    <string name="set_conflict">Установить конфликт</string>
    <string name="drop_conflict">Снять конфликт</string>
    <string name="close">Закрыть</string>
    <string name="reopen">Переоткрыть</string>
    <string name="skeleton">skeleton</string>
    <string name="medicine"> (%1$s)</string>
    <string name="vk">vk</string>
    <string name="chose_auth_type">Выберите способ авторизации:</string>
    <string name="short_arrow_left_img">short_arrow_left_img</string>
    <string name="rectangle_text">rectangle_text</string>
    <string name="search_img">search_img</string>
    <string name="logo_img">logo_img</string>
    <string name="animation">animation</string>
    <string name="hardness_unknown">неизвестно</string>
    <string name="creation_time">14:34</string>
    <string name="one_km">1км</string>
    <string name="address">Адрес</string>
    <string name="acc_type_other">Прочее</string>
    <string name="settings_search_distance">Дистанция для поиска:</string>
    <string name="search_depth">Глубина поиска:</string>
    <string name="account">Учетная запись</string>
    <string name="settings_exit_btn">settings_exit_btn</string>
    <string name="settings">Настройки</string>
    <string name="settings_distance_key">mc.distance.show</string>
    <string name="settings_depth_key">hours.depth</string>
    <string name="max_depth_time">Значение не может быть больше 24</string>
    <string name="min_depth_time">Значение не может быть меньше 1</string>
    <string name="min_radius">Значение не может быть меньше 1</string>
    <string name="show_no_older">Показать не старше\u0020</string>
    <string name="hour">" ч."</string>
    <string name="show_no_further">Показывать не далее\u0020</string>
    <string name="kilometer">\u0020км.</string>
    <string name="radius_default_value">200</string>
    <string name="depth_default_value">24</string>
</resources>