<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/create_acc_frame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <motocitizen.presentation.widgets.AppToolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/MOTO_MOTO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_create_acc_mm_button" />

    <Button
        android:id="@+id/MOTO_MAN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_create_acc_mp_button" />

    <Button
        android:id="@+id/SOLO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_create_acc_solo_button" />

    <Button
        android:id="@+id/MOTO_AUTO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_create_acc_ma_button" />
</LinearLayout>