<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <motocitizen.presentation.widgets.AppToolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/other_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_create_type_other_button" />

    <Button
        android:id="@+id/steal_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_create_type_steal_button" />

    <Button
        android:id="@+id/break_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_create_type_break_button" />

    <Button
        android:id="@+id/accident_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_create_type_acc_button" />
</LinearLayout>

