<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/create_map"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <motocitizen.presentation.widgets.AppToolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/create_map_container"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/activity_create_map_pointer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/map_provider_category"
            android:src="@drawable/target" />
    </FrameLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_confirm_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/SearchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/search_address_hint"
            android:inputType="textPostalAddress"
            android:textColorHint="#44FFFFFF"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/SEARCH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_search"
            android:contentDescription="@string/search_img" />
    </LinearLayout>
</LinearLayout>